##Text encoding: utf-8

2009-07-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: do not use a freed string in a message box.
	* libs/gcp/atom.cc: more work on charges reimplementation.
	* plugins/paint/atoms/chargetool.cc: ditto.

2009-07-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: set position after text to track size.
	* libs/gcp/atom.cc: changed int to gccv::Anchor as returned value by
	Atom::GetChargePosition.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/fragment-atom.cc: ditto.
	* libs/gcp/fragment-atom.h: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/fragment.h: ditto.
	* plugins/paint/atoms/chargetool.cc: mostly reimplement OnClicked.

2009-07-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* *Makefile.am: make anjuta happy (indentation issue).
	* libs/gcp/atom.cc: fixed electrons horizontal position.
	* libs/gcp/electron.cc: fixed electrons pair rendering.
	* plugins/paint/atoms/electrontool.cc: typo. 

2009-07-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/electron.cc: reimplemented in new canvas.
	* libs/gcp/electron.h: ditto.
	* libs/gcp/tools.cc: fix a crasher relmated to the ui-builder migration.
	* libs/gcp/tools.h: ditto.

2009-07-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fixed an uninitialized variable issue.
	* libs/gcp/atom.cc: update bonds when showing/hiding the symbol and use
	ink extents instead of logical extents for electrons and charges positions.
	* libs/gcp/window.cc: add a full screen menu option.

2009-06-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: add command-line options to get maximized
	or fullscreen windows.
	* libs/gcp/application.h: ditto.
	* libs/gcp/window.cc: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/application.h: ditto.

2009-06-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.11.3).

2009-06-25  Jean Bréfort  <jean.brefort@normalesup.org>